# kcf_extention

./: CMakeLists.txt  Makefile  README.md  graphGen.sh  main_vot.cpp  print-test-results  videoio.cpp  videoio.hpp  vot.hpp  wvtool
Freeman1/: groundtruth_rect.txt  image.txt
src/: CMakeLists.txt  complexmat.cpp  complexmat.cu  debug.cpp  debug.h  fft.cpp  fft.h  fft_cufft.cpp  fft_cufft.h  fft_fftw.cpp  fft_fftw.h  fft_opencv.cpp  fft_opencv.h  kcf.cpp  kcf.h  recttools.h  threadctx.hpp
src/cn/: cnfeat.hpp
src/piotr_fhog/: .sse.hpp.swo  .sse.hpp.swp  fhog.hpp  gradientMex.cpp  gradientMex.h  sse.hpp
